--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ nav a:hover{
 .splashpage-box h1{
     font-size: 20.5vmax;
     margin: 0;
+    padding: 2%;
     text-align: center;
     font-family: 'Open Sans', sans-serif;
     color: orangered;
